fix dialog dimension not fitted to content in Mozilla Firefox

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,6 +1,15 @@
 // http://tj.github.io/nib/
 @import 'nib'
 
+.mdl-dialog
+    width: -moz-fit-content
+    width: -webkit-fit-content
+    width: fit-content
+
+    height: -moz-fit-content
+    height: -webkit-fit-content
+    height: fit-content
+
 .input
     display: block
     position: relative
